--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     "minimum-stability": "stable",
     "require": {
         "php": "^7.4 | ^8.0",
-        "symfony/http-kernel": "^4.4 | ^5.1.5",
+        "symfony/http-kernel": "4.4.* | ^5.1.5",
         "symfony/security-bundle": "^4.4 | ^5.0",
         "symfony/orm-pack": "^2.0",
         "doctrine/doctrine-bundle": "^2.0",
